@@ -11,8 +11,8 @@ import com.eoscode.springapitools.data.repository.CustomFindByIdRepository;
 import com.eoscode.springapitools.data.repository.CustomFindDetailByIdRepository;
 import com.eoscode.springapitools.exceptions.EntityNotFoundException;
 import com.eoscode.springapitools.exceptions.MappingStructureValidationException;
-import com.eoscode.springapitools.util.NullAwareBeanUtilsBean;
 import com.eoscode.springapitools.util.ObjectUtils;
+import jakarta.annotation.PostConstruct;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,9 +22,7 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.util.ReflectionUtils;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.annotation.PostConstruct;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.util.*;
@@ -203,11 +201,7 @@ public abstract class AbstractService<Repository extends com.eoscode.springapito
         }
 
         if (entityOld != null) {
-            try {
-                NullAwareBeanUtilsBean.getInstance().copyProperties(entityOld, entity);
-            } catch (IllegalAccessException | InvocationTargetException e) {
-                log.error(e.getMessage(), e);
-            }
+            org.springframework.util.ReflectionUtils.shallowCopyFieldState(entityOld, entity);
             return getRepository().save(entityOld);
         } else {
             return getRepository().save(entity);
@@ -489,7 +483,7 @@ public abstract class AbstractService<Repository extends com.eoscode.springapito
         if (getEntityClass().isAnnotationPresent(NoDelete.class)) {
             NoDelete noDelete = getEntityClass().getAnnotation(NoDelete.class);
             try {
-                Entity entity = getEntityClass().newInstance();
+                Entity entity = getEntityClass().getDeclaredConstructor().newInstance();
                 Field field = getEntityClass().getDeclaredField(noDelete.field());
                 field.setAccessible(true);
                 field.set(entity, 1);
